Unit Test: MasterData Utils